Adding my rev2 backend files

--- a/db.config
+++ b/db.config
@@ -1,10 +1,9 @@
 create database rev1;
 
 create table solars ( 
-	sid primary serial key, 
+	sid serial primary key, 
 	name varchar(255) 
 );
-
 create table planets ( 
 	pid serial primary key, 
 	sid int(10), 
@@ -13,6 +12,20 @@ create table planets (
 );
 
 insert into solars (name) value ('intuit');
-
 insert into planets (sid, name, value) values (1, 'ticker', 'INTU'), (1, 'price', '59');
 
+
+
+
+
+
+create database rev2;
+
+use rev2;
+
+create table nodes ( id serial primary key, name varchar(255), jitid varchar(255), value text );
+create table childs ( id serial primary key, pid bigint(20) unsigned, chid bigint(20) unsigned );
+
+insert into nodes (name, jitid) values ('intuit', 'Az9'), ('fin info', '239');
+insert into nodes (name, jitid, value) values ('ticker', '8ob', 'INTU'), ('price', '7br', '59');
+insert into childs (pid, chid) values ('1', '2'), ('2', '3'), ('2', '4');
