Updated pySQL and stuffs to rev3

--- a/db.config
+++ b/db.config
@@ -29,3 +29,17 @@ create table childs ( id serial primary key, pid bigint(20) unsigned, chid bigin
 insert into nodes (name, jitid) values ('intuit', 'Az9'), ('fin info', '239');
 insert into nodes (name, jitid, value) values ('ticker', '8ob', 'INTU'), ('price', '7br', '59');
 insert into childs (pid, chid) values ('1', '2'), ('2', '3'), ('2', '4');
+
+
+
+
+
+
+create database rev3;
+
+use rev3;
+
+create table nodes ( nid serial primary key, name varchar(255), jitid varchar(64), value text );
+create table relations ( rid serial primary key, pid bigint(20) unsigned, chid bigint(20) unsigned );
+
+
